bobcat (4.09.00)        WIP

  * Compilation requires c++17



bobcat (4.08.02)

  * CSV4180 supports configurable field separator characters.

  * Fixed a flaw in the CSV4180 man-page.

  * Added new member 'release()' to the class CSV4180.

  * CSV4180's member clear by default resets the number of required fields to
    0. 

  * Members in ConfigFile received const modifiers according to the ConfigFile
    man-page.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 16 Sep 2017 10:14:41 +0200

bobcat (4.08.01)

  * Fixed a bug in fswap due to which fswap could not swap plain pointers.

  * The String class header file now includes cstring instead of strings.h

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Thu, 31 Aug 2017 11:14:11 +0200

bobcat (4.08.00)

  * Added new classes IQuotedPrintableStream and IQuotedPrintableStreambuf.

  * Added new class CSV4180, the class CSV is now deprecated and should no
    longer be used. Use CSV4180 instead.

  * Added new variants of the split members, as well as new members join,
    unescape, urlEncode and urlDecode to the class String.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Fri, 25 Aug 2017 14:15:46 +0200

bobcat (4.07.00)

  * The 'build' script now supports a command 'build select [strip] class ...'
    where 'class ...' is a set of bobcat class names. 'build select' creates a
    reduced bobcat library only containing the classes (and the classes on
    which they recursively depend) specified after 'build select [strip]. See
    also the file INSTALL.

  * The class 'BinopsBase' as defined in version 4.06.01 was rewritten and
    further simplified, following suggestions offered by Wiebe-Marten Wijnja.

  * The file exception/protection.cc no longer uses bobcat/stat, removing
    a circular dependency.

  * Dependencies on A2x and X2a were removed, as their facilities are by now
    provided by std::string.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 12 Feb 2017 13:58:03 +0100

bobcat (4.06.01)
