@@ -23,7 +23,7 @@
     // This is overruled by the environment variable CXXFLAGS
     // The options "-isystem tmp" must always be used, are set in
     // icmake/library and should not be altered.
-#define CXXFLAGS    "--std=c++14 -O2 -Wall -fdiagnostics-color=never"
+#define CXXFLAGS    "--std=c++17 -O2 -Wall -fdiagnostics-color=never"
 
     // Classes requiring the -pthread compiler option
 #define PTHREAD     "sharedmutex sharedblock sharedmemory sharedsegment " \
