@@ -5,7 +5,7 @@
 #define THREAD              ""
 #endif
 
-#define CXX                 "g++"
+#define CXX                 "g++-8"
 
 #define CXXFLAGS            "--std=c++17 " ${THREAD} " -Wall -O2" \
                             " -fdiagnostics-color=never "
