@@ -1,3 +1,4 @@
 #!/bin/bash
 
-g++ --std=c++14 -Wall -o driver -I. driver.cc -lbobcat -s
+g++-8 --std=c++17 -Wall -fdiagnostics-color=never -o driver -I. driver.cc \
+       -lbobcat -s
