@@ -1,7 +1,7 @@
 // bool erase(Key const &key)
 //
-template <typename Key, typename Value, typename Alloc>
-void LinearMap<Key, Value, Alloc>::erase(iterator iter)
+template <typename Key, typename Value>
+void LinearMap<Key, Value>::erase(iterator iter)
 {
     Base::erase(iter);
 }
