@@ -1,4 +1,4 @@
-template <typename Key, typename Value, typename Alloc>
-inline LinearMap<Key, Value, Alloc>::
+template <typename Key, typename Value>
+inline LinearMap<Key, Value>::
 {
 }
