@@ -1,8 +1,11 @@
-bobcat (4.09.00)        WIP
+bobcat (4.08.03)        WIP
 
   * Compilation requires c++17
 
+  * LinearMap does not define the Alloc template parameter anymore: no longer
+    required and producing a compilation error with g++8
 
+  * Varios cosmetic changes
 
 bobcat (4.08.02)
 
